<resources>
    <string name="app_name">News</string>
    <string name="article_icon_preview_text">Article icon preview</string>
    <string name="breaking_news_bottomMenu_title">Breaking News</string>
    <string name="saved_news_bottomMenu_title">Saved News</string>
    <string name="profile_bottomMenu_title">Profile</string>
    <string name="search_news_menu_title">Search News</string>
    <string name="save_news_button_description">Save news</string>
    <string name="search_hint_text">Search for news…</string>
    <string name="source_article_text">SOURCE</string>
    <string name="title_article_text">TITLE</string>
    <string name="description_article_text">DESCRIPTION</string>
    <string name="published_at_article_text">PUBLISHED AT</string>
    <string name="text_top_news">Top News</string>
    <string name="businessTabItem">Business</string>
    <string name="entertainmentTabItem">Entertainment</string>
    <string name="generalTabItem">General</string>
    <string name="healthTabItem">Health</string>
    <string name="scienceTabItem">Science</string>
    <string name="sportsTabItem">Sports</string>
    <string name="technologyTabItem">Technology</string>
    <string name="text_categories">Categories</string>
    <string name="btnEditProfileText">Edit profile</string>
    <string name="tvProfileMail">user@gmail.com</string>
    <string name="tvProfileName">name surname</string>
    <string name="tvEditProfilePageTitle">Edit Profile</string>
    <string name="tvEditPageInfoTitle">Your information</string>
    <string name="tvUsernameText">User Name</string>
    <string name="tvEditPageSurnameTitle">Last name</string>
    <string name="tvEditPageEmailTitle">e-mail</string>
    <string name="tvSignInPageTitleText">Get latest news for you\n anytime &amp; anywhere</string>
    <string name="tvEmailHintMsg">E-mail</string>
    <string name="tvPasswordHintMsg">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="tvDontHaveAnAccount">Don\'t have an account?</string>
    <string name="tvSignUpText">Sign up</string>
    <string name="tvLoginTitle">Login</string>
    <string name="tvSignUpTitle">Sign up</string>
    <string name="btnSignUpText">Sign up</string>
    <string name="textAlreadyHaveAnAccount">Already have an account?</string>
    <string name="tvTextOR">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="password_length_condition">Password must not be less than 8 characters</string>
    <string name="password_match_condition">Passwords does not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username_is_empty">Username should not be empty</string>
    <string name="email_is_empty">E-mail should not be empty</string>
    <string name="field_is_empty">Field should not be empty</string>
    <string name="password_is_empty">Password should not be empty</string>
<!--    Don't touch this id-->
    <string name="google_auth_id">201600956776-4ppp6ol5kkamv84bpisot5nq0colc0pb.apps.googleusercontent.com</string>
    <string name="settingsBtnText">Settings</string>
    <string name="logoutBtnText">Log out</string>
    <string name="welcome_text">Welcome to SnapNews</string>
    <string name="welcome_subtitle">Browse the latest news articles</string>
    <string name="get_started_btn_text">Get Started</string>
    <string name="country_text">Country</string>
    <string name="united_states_text">United States</string>
    <string name="choose_country_text">Choose country to receive its local news</string>
    <string name="settings_text">Settings</string>
</resources>