<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarWidget"
        app:menu="@menu/toolbar_menu"
        app:title=" "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:logo="@drawable/ic_logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/tvTopNewsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarWidget"
        app:layout_constraintBottom_toTopOf="@id/rvBreakingNews"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_top_news"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBreakingNews"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/tvCategoryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTopNewsText"
        tools:listitem="@layout/item_top_news_preview"/>

    <TextView
        android:id="@+id/tvCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvBreakingNews"
        app:layout_constraintBottom_toTopOf="@+id/tabCategoryLayout"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabCategoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:tabMode="auto"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabTextColor="@drawable/selector_tab_text"
        app:tabBackground="@drawable/selector_tab_background"
        app:tabRippleColor="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryText"
        app:layout_constraintBottom_toTopOf="@id/rvCategoryNews">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainmentTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scienceTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sportsTabItem" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technologyTabItem" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoryNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabCategoryLayout"
        tools:listitem="@layout/item_article_preview"/>

    <ProgressBar
        android:id="@+id/paginationProgressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>