<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfileBackground"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ivRoundedProfileBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_profile_fon" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tvProfileName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileBackground" />

    <TextView
        android:id="@+id/tvUserMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tvProfileMail"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_profile_btn"
        android:drawableStart="@drawable/ic_profile"
        android:gravity="center|left"
        android:padding="8dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/white"
        android:paddingEnd="16dp"
        android:text="@string/btnEditProfileText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserMail" />

</androidx.constraintlayout.widget.ConstraintLayout>